# CPLib-AlgOritHm

./: .clang-format  CMakeLists.txt  LICENSE  README.md  agoh
.github/workflows/: test.yml
lib/: DSU.hpp  MonotonyStack.hpp  SparseTable.hpp  algo.hpp  fraction.hpp  graph.hpp  matrix.hpp  string.hpp
lib/algo/: algo.hpp
lib/datastructure/: MonotonyStack.hpp  SparseTable.hpp
lib/ds/: DSU.hpp  MonotonyQueue.hpp  MonotonyStack.hpp  SparseTable.hpp
lib/math/: numtheory.hpp
test/: algoTest.cpp  fractionTest.cpp  graphTest.cpp  matrixTest.cpp  stringTest.cpp
test/algo/: algoTest.cpp
test/ds/: DSUTest.cpp  MonotonyQueueTest.cpp  MonotonyStackTest.cpp  MonotonyTest.cpp  SparseTableTest.cpp
test/math/: numtheoryTest.cpp
